# erlang_multi_pollset

./: AUTHORS  COPYING  Makefile  README.md  build.sh  rebar  rebar.config
c__src/: CMakeLists.txt  GNUmakefile  ev.c  raw_socket.cpp
src/: gen_socket.app.src  gen_socket.erl  gen_socket.hrl  gen_socket_app.erl  gen_socket_poller.erl  gen_socket_sup.erl  raw_socket.erl
test/: gensocket_test.erl  simple_client.erl  simple_server.erl
